fix card overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,15 @@
 }
 body {
   display: flex;
-  font-family: "Roboto Mono", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
+.bold-text {
+  font-size: xx-large;
+}
+.light-grey {
+  color: rgb(112, 107, 107);
+}
+
 .image-cropper {
   width: 75px;
   height: 75px;
@@ -17,14 +24,13 @@ body {
 }
 .profile-pic {
   display: inline;
-  margin: 0 auto;
-  margin-left: -25%;
+  margin: 0 auto 0 -25%;
   height: 100%;
   width: auto;
 }
 
 .left-side {
-  flex: 2;
+  flex: 1.5;
   max-width: 400px;
   background-color: #fdfbed;
   height: 100vh;
@@ -35,6 +41,9 @@ body {
 .right-side {
   flex: 4;
   background-color: #dad7cd;
+  display: grid;
+  grid-template-rows: minmax(150px,150px) 5fr;
+  grid-template-columns: 1fr;
 }
 .avatar-name {
   display: flex;
@@ -43,9 +52,40 @@ body {
   padding-left: 60px;
   gap: 20px;
 }
-.bold-text {
-  font-size: xx-large;
+.projects {
+  display: flex;
+  flex-direction: column;
+  padding-left: 10%;
+  gap: 40px;
 }
-.light-grey {
-  color: rgb(112, 107, 107);
+.right-header {
+  background-color: #fdfbed;
+  padding: 25px;
+}
+.card-container {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 230px));
+  grid-auto-rows: minmax(200px, 280px);
+  padding: 20px;
+
+}
+.card {
+  width: 100%;
+  height: 100%;
+  min-width: 0;
+  background-color: #fdfbed;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 25px;
+  gap: 5px;
+}
+.body-text {
+  font-size: small;
+  font-weight: 400;
+  text-overflow: ellipsis;
+}
+button {
+  margin-top: auto;
 }
